--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/base.css">
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css">
+	<script src="{{ MEDIA_URL }}js/modernizr.custom.78131.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	{% block extra_head %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
