--- a/xperiences/merchants/templates/merchants/merchant_application.html
+++ b/xperiences/merchants/templates/merchants/merchant_application.html
@@ -48,7 +48,7 @@
          
         <fieldset>
             <legend>Tell us about yourself</legend>
-            <textarea rows="20" cols="100" id="vendor_description" name="description" value='{{ form.description.value }}'></textarea><br /><br />
+            <textarea rows="20" cols="100" class="ckeditor" id="vendor_description" name="description" value='{{ form.description.value }}'></textarea><br /><br />
         </fieldset>
         
         <br /><br />
@@ -56,7 +56,7 @@
         <fieldset>
             <legend>What are you offering?</legend>    
             <label>Tell us more about your service, product or skills<br />
-            <textarea rows="20" cols="100" id="vendor_description" name="offering" value='{{ form.offering.value }}'></textarea><br /><br />
+            <textarea rows="20" cols="100" class="ckeditor" id="vendor_description" name="offering" value='{{ form.offering.value }}'></textarea><br /><br />
             </label><br /><br />
         </fieldset>
         
@@ -65,7 +65,7 @@
         <fieldset>
             <legend>Who are your customers?</legend>    
             <label>Describe your target customers<br />
-            <textarea rows="20" cols="100" id="target_customers_description" name="target_customers" value='{{ form.target_customers.value }}'></textarea><br /><br />
+            <textarea rows="20" cols="100" class="ckeditor" id="target_customers_description" name="target_customers" value='{{ form.target_customers.value }}'></textarea><br /><br />
             </label><br /><br />
         </fieldset>
         
