--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -19,7 +19,9 @@
 			<span>I want to find</span>
 			<input class="default span2" type="text" alt="activities"/>
 			<span>near</span>
-			<input class="default span3" type="text" alt="address or zip code"/>
+			<input class="default span3" id="address_field" type="text" placeholder="address or zip code"/>
+            <input type='hidden' id="lat_field" name='lat' />
+            <input type='hidden' id="lng_field" name='lng' />
 			<input class="btn" type="submit" value="Search" />
 		</form>
 	</div>
