address autocomplete & search

--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -17,9 +17,9 @@
 		<div class="pad15">
 		<form>
 			<span>I want to find</span>
-			<input class="default span2" type="text" alt="activities"/>
+			<input class="default span2" id="keywords_field" type="text" alt="activities" name='keywords'/>
 			<span>near</span>
-			<input class="default span3" id="address_field" type="text" placeholder="address or zip code"/>
+			<input class="default span3" name='address' id="address_field" type="text" placeholder="address or zip code"/>
             <input type='hidden' id="lat_field" name='lat' />
             <input type='hidden' id="lng_field" name='lng' />
 			<input class="btn" type="submit" value="Search" />
