send message from javascript

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -117,7 +117,7 @@
                     {{ merchant.address }}<br />
                     </div>
                 </div>
-                <a class="btn btn-blue font14">Contact me</a>
+                <a class="btn btn-blue font14" onclick='send_message_dialog("{{ merchant.id }}");'>Contact me</a>
             </div><!-- close pad15 -->
         </div><!-- close seller-info -->
         <div class="pad8 panel row">
