--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -15,7 +15,7 @@
 	<div class="image-grid"></div>
 	<div id="search-box" class="panel dark">
 		<div class="pad15">
-		<form>
+		<form method='GET' action='/experiences/list/'>
 			<span>I want to find</span>
 			<input class="default span2" id="keywords_field" type="text" alt="activities" name='keywords'/>
 			<span>near</span>
