--- a/xperiences/experiences/templates/experiences/experience_by_category.html
+++ b/xperiences/experiences/templates/experiences/experience_by_category.html
@@ -134,7 +134,7 @@
                 </ul>
                 <ul id="paging-arrows"><!-- id or class? -->
                     <li><a href="#"><img src="#"></a></li>
-                    <li><a href="#"><img scr="#"></a></li>
+                    <li><a href="#"><img src="#"></a></li>
                 </ul>
             </div>
 
