--- a/xperiences/templates/start.html
+++ b/xperiences/templates/start.html
@@ -1,37 +1,37 @@
 {% extends "base.html" %}
 {% block title %}Spread the love{% endblock %}
 {% block content %}
-	<div class="container">
-		<div class="space30"></div>
-		<div class="span9 font12 center">
-			<div class="panel">
-				<div class="pad15">
-					<h2>Our chefs can be anyone</h2>
-                <p>an amateur food lover, an artisan chocolate
-                hobbyist, a rooftop urban farmer, an aspiring restauranteur or a
-                professional in the industry trying out something different. All you
-                need is the passion to share your love of a unique food experience.</p>
-        
-				<!--        {Future: Video of Happy Merchants.} -->
-        
-                <h4>A few reasons why you should list with us:</h4>
-                <ul>
-                    <li>-  Meet cool people while doing what you love</li>
-                    <li>-  Connect with people who share your passion</li>
-                    <li>-  Offset the price of your ingredients and make some extra cash</li>
-                    <li>-  Test your business concept with an eager audience</li>
-                    <li>-  You always make too much food!</li>
-                </ul>
-                
-				<h4>Not exactly sure what you can offer, or whether your offering would work on our site? </h4>
-				<p>Don't worry, we'll help you through this process. Just fill out the
-                application form to the best of your abilities. We'll review everything and try
-                to provide timely and helpful feedback.</p>
-                
-				<a href="/merchants/register" class="btn submit">Get started!</a>
+	<div class="space30"></div>
+	<div class="span11 font12 center">
+		<div id="start" class="panel">
+			<div class="span7">
+			<div class="pad25">
+				<h1>Our chefs can be anyone</h1>
+			<p>an amateur food lover, an artisan chocolate
+			hobbyist, a rooftop urban farmer, an aspiring restauranteur or a
+			professional in the industry trying out something different. All you
+			need is the passion to share your love of a unique food experience.</p>
+	
+			<!--        {Future: Video of Happy Merchants.} -->
+	
+			<h4>A few reasons why you should list with us:</h4>
+			<ul>
+				<li>Meet cool people while doing what you love</li>
+				<li>Connect with people who share your passion</li>
+				<li>Offset the price of your ingredients and make some extra cash</li>
+				<li>Test your business concept with an eager audience</li>
+				<li>You always make too much food!</li>
+			</ul>
+			
+			<h4>Not exactly sure what you can offer, or whether your offering would work on our site? </h4>
+			<p>Don't worry, we'll help you through this process. Just fill out the
+			application form to the best of your abilities. We'll review everything and try
+			to provide timely and helpful feedback.</p>
+			
+			<a href="/merchants/register" class="btn submit">Get started!</a>
 				</div>
 			</div>
 		</div>
-    </div>
+	</div>
 {% endblock %}
             
