--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -616,6 +616,22 @@ a.message-link {
 	margin-left: 20px;
 }
 
+/**
+ * Error
+ **/
+
+#error {
+	background: white url(../images/error.jpg) no-repeat center top;
+	height: 500px;
+}
+
+#error h1 {
+	text-align: center;
+	position: relative;
+	top: 100px;
+	font-size: 300%;
+}
+
 /*------------------------------------------------------------------------------*/
 /*	ABOUT
 /*------------------------------------------------------------------------------*/
