--- a/xperiences/templates/403.html
+++ b/xperiences/templates/403.html
@@ -1,4 +1,5 @@
 {% extends 'error.html' %}
 {% block error_message %}
-    Forbidden
+	<h1>403</h1>
+	<span>We can't give you what you want!</span>
 {% endblock %}
