--- a/xperiences/templates/404.html
+++ b/xperiences/templates/404.html
@@ -1,4 +1,5 @@
 {% extends 'error.html' %}
 {% block error_message %}
-    Page not found
+	<h1>404</h1>
+	<span>We can't find what you're looking for!</span>
 {% endblock %}
