--- a/xperiences/templates/500.html
+++ b/xperiences/templates/500.html
@@ -1,4 +1,5 @@
 {% extends 'error.html' %}
 {% block error_message %}
-    Internal Server Error
+	<h1>500</h1>
+	<span>We encountered an Internal Server Error</span>
 {% endblock %}
