--- a/xperiences/media/css/front-page.css
+++ b/xperiences/media/css/front-page.css
@@ -4,6 +4,7 @@
 #front-page {
 	min-height: 800px;
 	background: url(../images/background.jpg);
+	text-align: center;
 }
 
 #front-page header {
@@ -19,8 +20,8 @@
 #front-page .top-spacer {
 	height: 80px; /* I prefer it when you just see a very thin line of the
 	/*backrground image - NM */
-	background: url(../images/header_border.png) left;
-	box-shadow: inset 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+/*	background: url(../images/header_border.png) left; 
+	box-shadow: inset 0px 0px 8px 0px rgba(0, 0, 0, 0.2); */
 }
 
 #front-page #search-box {
