--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -2,6 +2,7 @@
 <header>
 	<div class="header-wrap">
 		<a id="logo" href="/"><span>naanprofit</span></a>
+		<a id="login-btn" class="btn btn-blue" href="#">Login</a>
 		<a id="service-list" class="btn" href="/start">Start selling</a>
 	</div>
 	<div class="bottom-border"></div>
