--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -1,4 +1,3 @@
-<!-- THIS IS THE HOME PAGE INDEX.HTML SAVED IN THE EXPERIENCES APP -->
 {% extends "layout.html" %}
 
 {% load x_tags %}
@@ -10,6 +9,7 @@
 {% block body %}
 <!--<h1>hits: {{ hits }}</h1>-->
 <div id="front-page">
+	{% include "header.html" %}
 	<div class="top-spacer"></div>
 	<div class="space120"></div>
 	<div class="image-grid"></div>
@@ -17,7 +17,7 @@
 		<div class="pad15">
 		<form method='GET' action='/experiences/list/'>
 			<span>I want to find</span>
-			<input class="default span2" id="keywords_field" type="text" alt="activities" name='keywords'/>
+			<input class="default span2" id="keywords_field" type="text" placeholder="activities" name='keywords'/>
 			<span>near</span>
 			<input class="default span3" name='address' id="address_field" type="text" placeholder="address or zip code"/>
             <input type='hidden' id="lat_field" name='lat' />
@@ -28,7 +28,6 @@
 	</div>
 
 	<div class="clear"></div>
-	{% include "header.html" %}
 </div>
 {% include "footer.html" %}
 
