--- a/xperiences/media/css/base.css
+++ b/xperiences/media/css/base.css
@@ -104,7 +104,6 @@ hr {
 	min-height: 600px;
 	padding-bottom: 40px;
 	margin: 0 auto;
-	background: url(../images/grid.png);
 }
 
 .container::after,
@@ -542,13 +541,21 @@ select:focus {
 	color: #444;
 
 	background-color: #f6f6f6;
+	background: linear-gradient(top, #fafafa, #f6f6f6, #e9e9e9);
 	background: -moz-linear-gradient(top, #fafafa, #f6f6f6, #e9e9e9);
 	background: -webkit-linear-gradient(top, #fafafa, #f6f6f6, #e9e9e9);
+	background: -o-linear-gradient(top, #fafafa, #f6f6f6, #e9e9e9);
+	background: -ms-linear-gradient(top, #fafafa, #f6f6f6, #e9e9e9);
 	padding: 8px 25px 4px;
 	border-radius: 4px;
 	border: 1px solid #e9e9e9;
 	box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.8), inset 0px 1px 1px 0px rgba(255, 255, 255, 0.2);
 	cursor: pointer;
+	margin-right: 10px;
+}
+
+.btn-big {
+	font-size: 18pt;
 }
 
 .btn:hover {
@@ -566,7 +573,7 @@ select:focus {
 	box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.8), inset 0px 1px 1px 0px rgba(255, 255, 255, 0.2);
 }
 
-.dark .btn, input[type="submit"] {
+.dark .btn, input[type="submit"], .submit {
 	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.6), inset 0px 1px 1px 0px rgba(255, 255, 255, 0.2);
 }
 
@@ -575,9 +582,9 @@ input[type="submit"], .submit {
 	background-color: #9cc500;
 	background: linear-gradient(top, #9cc500, #8aa914);
 	background: -o-linear-gradient(top, #9cc500, #8aa914);
-	background: -ms-linear-gradient(top, #9cc500, #8aa914);
 	background: -moz-linear-gradient(top, #9cc500, #8aa914);
 	background: -webkit-linear-gradient(top, #9cc500, #8aa914);
+	background: -ms-linear-gradient(top, #9cc500, #8aa914);
 	border: 1px solid #8aa914;
 	color: white;
 	text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(255, 255, 255, 0.2);
