--- a/xperiences/templates/share.html
+++ b/xperiences/templates/share.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% block title %}Spread the love{% endblock %}
+
 {% block content %}
 <div class="space30"></div>
 <div class="font12 center span11">
@@ -21,17 +23,17 @@
 					<a href="#" class="btn btn-blue">Share on Facebook</a>
 					<a href="http://www.twitter.com/share" id="twitter-share" class="btn">Share on Twitter</a>
 				</div>
-				<h4>or, you can</h4>
-				<div class="row">
-					<a href="email-referral.html" class="btn">Invite your friends with email</a>
-					<a href="fb-referral.html" class="btn btn-blue">Invite your friends with Facebook</a>
+				<div id="invite-buttons">
+					<h4>or, you can</h4>
+					<div class="row">
+						<a id="invite-email" href="email_referral" class="btn btn-big">Invite your friends with email</a>
+						<a href="fb_referral" class="btn btn-blue btn-big">Invite your friends with Facebook</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
-
 {% endblock %}
 
 <!--Tell us about the person you've got in mind and why they are perfect for the
