--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -1,5 +1,8 @@
 {% block header %}
 <header>
+	<a id="header-notice-bar" href="/share">
+		The more the merrier. Share this with your friends and eat to your heart's content!
+	</a>
 	<div class="header-wrap">
 		<a id="logo" href="/"><span>naanprofit</span></a>
 		<a id="login-btn" class="btn btn-blue" href="#">Login</a>
